tests/req038/manifests/08-uiplugin-distributed-tracing.yaml
apiVersion: observability.openshift.io/v1alpha1
kind: UIPlugin
metadata:
  name: distributed-tracing
spec:
  type: DistributedTracing
  distributedTracing:
    timeout: "30s"
